plugins/devkit/devkit-kotlin-tests/testData/inspections/registrationProblems/code/MyActionWithoutDefaultCtor.kt
import com.intellij.openapi.actionSystem.AnAction

@Suppress("UNUSED_PARAMETER")
class <error descr="Action class must have a no-argument constructor">MyActionWithoutDefaultCtor</error>(something: String) : AnAction()